# projegd-sgribding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  release.yml
src/: common.h  main.cpp  mapping.h  random.h  types.h  version.h.tpl
src/games/: lol.h
